--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 # port
 server.port=8080
 # db
-hikari.dataSourceClassName:org.postgresql.Driver
-hikari.dataSourceProperties.url:jdbc:postgresql://192.168.3.230:5432/pm
-hikari.dataSourceProperties.user:pm
-hikari.dataSourceProperties.password:aaaaaaaa
+#hikari.dataSourceClassName:org.postgresql.Driver
+#hikari.dataSourceProperties.url:jdbc:postgresql://192.168.3.230:5432/pm
+#hikari.dataSourceProperties.user:pm
+#hikari.dataSourceProperties.password:aaaaaaaa
+hikari.dataSourceClassName:com.mysql.jdbc.Driver
+hikari.dataSourceProperties.url:jdbc:mysql://192.168.3.230:3306/mysql
+hikari.dataSourceProperties.user:root
+hikari.dataSourceProperties.password:123
+
 hikari.poolName:HikariCP
 hikari.minimumIdle:5
 hikari.maximumPoolSize:25
