更换数据源地址

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 # port
 server.port=8080
 # db
-#hikari.dataSourceClassName:org.postgresql.Driver
-#hikari.dataSourceProperties.url:jdbc:postgresql://192.168.3.230:5432/pm
-#hikari.dataSourceProperties.user:pm
-#hikari.dataSourceProperties.password:aaaaaaaa
 hikari.dataSourceClassName:com.mysql.jdbc.Driver
-hikari.dataSourceProperties.url:jdbc:mysql://192.168.3.230:3306/mysql
+hikari.dataSourceProperties.url:jdbc:mysql://192.168.199.209:3306/bcwecp
 hikari.dataSourceProperties.user:root
-hikari.dataSourceProperties.password:123
+hikari.dataSourceProperties.password:bcw123
 
 hikari.poolName:HikariCP
 hikari.minimumIdle:5
